Fixing extra whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -1,93 +1,55 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
-
     color: #222;
-
     font-size: 1em;
-
     line-height: 1.4;
-
 }
 
 ::-moz-selection {
-
     background: #b3d4fc;
-
     text-shadow: none;
-
 }
 
 ::selection {
-
     background: #b3d4fc;
-
     text-shadow: none;
-
 }
 
 hr {
-
     display: block;
-
     height: 1px;
-
     border: 0;
-
     border-top: 1px solid #ccc;
-
     margin: 1em 0;
-
     padding: 0;
-
 }
 
 audio,
-
 canvas,
-
 iframe,
-
 img,
-
 svg,
-
 video {
-
     vertical-align: middle;
-
 }
 
 fieldset {
-
     border: 0;
-
     margin: 0;
-
     padding: 0;
-
 }
 
 textarea {
-
     resize: vertical;
-
 }
 
 .browserupgrade {
-
     margin: 0.2em 0;
-
     background: #ccc;
-
     color: #000;
-
     padding: 0.2em 0;
-
 }
-
-
-
 
 
 /* ==========================================================================
@@ -97,78 +59,53 @@ textarea {
    ========================================================================== */
 
 body {
-
-	display: flex;
-
-	min-height: 100vh; 		/*View height*/
-
-	flex-direction: column;
-
+    display: flex;
+    min-height: 100vh;
+    /*View height*/
+    flex-direction: column;
 }
 
 .wrapper {
-
-	flex: 1;	/*Ocupa el espacio libre de la pagina*/
-
+    flex: 1;
+    /*Ocupa el espacio libre de la pagina*/
 }
 
 .footer {
-
-	background-color: pink;
-
-	text-align: center;
-
-	padding: 20px;	 /* Centralizando contenido del footer*/
-
+    background-color: pink;
+    text-align: center;
+    padding: 20px;
+    /* Centralizando contenido del footer*/
 }
 
 a {
-
-	text-decoration: none; /* Eliminar el estilo default de los links*/
-
-}	
+    text-decoration: none;
+    /* Eliminar el estilo default de los links*/
+}
 
 .menu-li {
-
-	display: inline-block;
-
-	font-size: 30px;
-
-	margin-right: 20px;
-
-	float: right;
+    display: inline-block;
+    font-size: 30px;
+    margin-right: 20px;
+    float: right;
 }
 
 .menu {
-
-	width: 100%;
-
-	height: 75px; 
-
-	background-color: #ffefd5;
-
-	padding-top: 8px;
-
-	text-align: right;
-
+    width: 100%;
+    height: 75px;
+    background-color: #ffefd5;
+    padding-top: 8px;
+    text-align: right;
 }
 
 ul {
-
-	margin: 0px;
-
-	padding: 0px;
-
+    margin: 0px;
+    padding: 0px;
 }
 
 .menu-li-home {
-
-	float: left;
-
-	margin-left: 20px;
-
+    float: left;
+    margin-left: 20px;
 }
-
 
 
 /* ==========================================================================
@@ -177,30 +114,12 @@ ul {
 
    ========================================================================== */
 
-
-
-   
-
-@media only screen and (min-width: 35em) {
-
-
-
-}
-
-
+@media only screen and (min-width: 35em) {}
 
 @media print,
-
-       (-o-min-device-pixel-ratio: 5/4),
-
-       (-webkit-min-device-pixel-ratio: 1.25),
-
-       (min-resolution: 120dpi) {
-
-
-
-}
-
+(-o-min-device-pixel-ratio: 5/4),
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 120dpi) {}
 
 
 /* ==========================================================================
@@ -209,84 +128,49 @@ ul {
 
    ========================================================================== */
 
-
-
 .hidden {
-
     display: none !important;
-
     visibility: hidden;
-
 }
 
-
-
 .visuallyhidden {
-
     border: 0;
-
     clip: rect(0 0 0 0);
-
     height: 1px;
-
     margin: -1px;
-
     overflow: hidden;
-
     padding: 0;
-
     position: absolute;
-
     width: 1px;
-
 }
 
 .visuallyhidden.focusable:active,
-
 .visuallyhidden.focusable:focus {
-
     clip: auto;
-
     height: auto;
-
     margin: 0;
-
     overflow: visible;
-
     position: static;
-
     width: auto;
-
 }
 
 .invisible {
-
     visibility: hidden;
-
 }
 
 .clearfix:before,
-
 .clearfix:after {
-
     content: " ";
-
     display: table;
-
 }
 
 .clearfix:after {
-
     clear: both;
-
 }
 
 .clearfix {
-
     *zoom: 1;
-
 }
-
 
 
 /* ==========================================================================
@@ -295,120 +179,62 @@ ul {
 
    ========================================================================== */
 
-
-
 @media print {
-
     *,
-
     *:before,
-
     *:after {
-
         background: transparent !important;
-
         color: #000 !important;
-
         box-shadow: none !important;
-
         text-shadow: none !important;
-
     }
-
-
 
     a,
-
     a:visited {
-
         text-decoration: underline;
-
     }
-
-
-
-
 
     a[href]:after {
-
         content: " (" attr(href) ")";
-
     }
-
-
 
     abbr[title]:after {
-
         content: " (" attr(title) ")";
-
     }
-
-
 
     a[href^="#"]:after,
-
     a[href^="javascript:"]:after {
-
         content: "";
-
     }
-
-
 
     pre,
-
     blockquote {
-
         border: 1px solid #999;
-
         page-break-inside: avoid;
-
     }
-
-
 
     thead {
-
         display: table-header-group;
-
     }
-
-
 
     tr,
-
     img {
-
         page-break-inside: avoid;
-
     }
 
-
-
     img {
-
         max-width: 100% !important;
-
     }
 
     p,
-
     h2,
-
     h3 {
-
         orphans: 3;
-
         widows: 3;
-
     }
 
     h2,
-
     h3 {
-
         page-break-after: avoid;
-
     }
-
 }
